--- a/renovate.json5
+++ b/renovate.json5
@@ -14,7 +14,7 @@
       "automerge": true, 
       // auto merge defaults to automergeType = "pr"
       // https://docs.renovatebot.com/configuration-options/#automergetype
-      "commitMessageTopic": "Update Patch and Minor versions"
+      "commitMessageTopic": "Patch and Minor versions"
     } 
    ]
 }
